The functionality of create a route was implemented